src/test/ui/parser/issues/issue-91461.rs
fn main() {
    a(_:b:,)
    //~^ ERROR: expected identifier, found reserved identifier `_`
    //~| ERROR: expected type, found `,`
    //~| ERROR: expected type, found `,`
}
